完善。但是psd修改以后有些图片会被ps或者插件压缩，导致图片需要重新生成并引用，以后再说

--- a/.gitignore
+++ b/.gitignore
@@ -13,14 +13,14 @@ _ReSharper.CSharp/
 ~$*.xlsx.meta
 
 #Unity相关目录
-.gradle
-Bundles
-Library
-Logs
-UserSettings
+/.gradle
+/Bundles
+/Library
+/Logs
+/UserSettings
 /*.csproj
-*.vsconfig
-ProjectSettings/RiderScriptEditorPersistedState.asset
+/*.vsconfig
+/ProjectSettings/RiderScriptEditorPersistedState.asset
 
 HybridCLRData
 Assets/StreamingAssets/
